--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,49 +1,31 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: CICD Pipeline
 
 on:
   push:
     branches: [ "main" ]
+
 jobs:
-  compile:
+  test-security-check:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn compile
-  security-check:
-    runs-on: self-hosted
-    needs: compile
-    steps:
-    - uses: actions/checkout@v4
-    - name: Trivy Installation
+
+    - name: Install Trivy
       run: |
+        sudo apt-get update
         sudo apt-get install -y wget apt-transport-https gnupg lsb-release
         wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
-        sudo apt-get update -y
+        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update
         sudo apt-get install -y trivy
 
-    - name: Trivy FS Scan
-      run: trivy fs --format table -o fs-report.json .
+    - name: Run Trivy on src
+      run: trivy fs --format table -o fs-report.json ./src
 
-    - name: Gitleaks Installation
-      run: sudo apt install gitleaks -y
-    - name: Gitleaks Code Scan
-      run: gitleaks detect source . -r gitleaks-report.json -f json      
+    - name: Install Gitleaks
+      run: sudo apt-get install -y gitleaks
 
-  
-
+    - name: Run Gitleaks
+      run: gitleaks detect --source . --report-format json --report-path gitleaks-report.json
