--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,10 +5,21 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test-security-check:
+  compile:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn compile
+  security-check:
+    runs-on: self-hosted
+    needs: compile
     steps:
     - uses: actions/checkout@v4
 
