--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   compile:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -17,9 +18,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn compile
+
   security-check:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest  # 🔁 switch from self-hosted temporarily
     needs: compile
+    timeout-minutes: 15
     steps:
     - uses: actions/checkout@v4
 
