--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   compile:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     timeout-minutes: 10
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
       run: mvn compile
 
   security-check:
-    runs-on: ubuntu-latest  # 🔁 switch from self-hosted temporarily
+    runs-on: self-hosted  # 🔁 switch from self-hosted temporarily
     needs: compile
     timeout-minutes: 15
     steps:
