--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,3 +43,17 @@ jobs:
 
     - name: Run Gitleaks
       run: gitleaks detect --source . --report-format json --report-path gitleaks-report.json
+  test:
+    runs-on: self-hosted
+    needs: security-check
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Unit Test Cases
+      run: mvn test
+      
